[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georef-tracker"
version = "0.1.0"
description = "Geo-referenced multi-object tracking for wildlife detection in thermal drone videos"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "Christoph Praschl", email = "christoph.praschl@fh-hagenberg.at"},
]
maintainers = [
    {name = "Christoph Praschl", email = "christoph.praschl@fh-hagenberg.at"},
]
keywords = [
    "tracking",
    "multi-object-tracking",
    "wildlife",
    "drone",
    "thermal",
    "geo-referenced",
    "computer-vision",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "opencv-python>=4.5.0",
    "boxmot>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/cpraschl/georef-tracker"
Documentation = "https://github.com/cpraschl/georef-tracker#readme"
Repository = "https://github.com/cpraschl/georef-tracker.git"
Issues = "https://github.com/cpraschl/georef-tracker/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
